fix: payment_method NULL 臾몄젣 諛?寃곗젣 ?꾨씫 ?곴뎄 ?닿껐
1. 二쇰Ц ?앹꽦 API: paymentMethod ?뚮씪誘명꽣 ?섏떊 諛????2. completeOrderAfterPayment: payment_method 紐낆떆???낅뜲?댄듃
3. 寃곗젣 ?깃났 ?섏씠吏: Dodo sessionStorage 諛깆뾽, purchases 湲곕줉, payment_method 蹂댁젙
4. PayPal Edge Function: payment_method='paypal' 紐낆떆???낅뜲?댄듃
5. Dodo ?뱁썒: payment.succeeded ??二쇰Ц ?꾨즺 泥섎━ + purchases 湲곕줉
6. PortOne verify API: payment_method ?낅뜲?댄듃 + purchases 湲곕줉
7. 媛?寃곗젣??Dodo/PayPal/Points): 二쇰Ц ?앹꽦 ??paymentMethod ?꾨떖

--- a/src/i18n/locales/de/home.json
+++ b/src/i18n/locales/de/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "Können Sie die gewünschten Notenblätter nicht finden? Fordern Sie eine individuelle Bestellung an! Wir erstellen professionelle Schlagzeug-Notenblätter für jeden gewünschten Song.",
   "instantDownloadTitle": "Sofortiger Download",
   "instantDownloadDescription": "Kaufen und sofort herunterladen. Kein Warten, beginnen Sie sofort mit hochwertigen PDF-Dateien zu üben.",
+  "freeLessonTitle": "Kostenlose Schlagzeug-Lektionen",
+  "freeLessonDescription": "Verbessern Sie Ihre Fähigkeiten mit kostenlosen Notenblättern und YouTube-Lektionen!",
+  "freeLessonBadge": "GRATIS",
+  "freeLessonViewAll": "Alle Lektionen ansehen",
+  "freeLessonDownloadPDF": "PDF herunterladen",
+  "freeLessonWatchVideo": "Video ansehen",
+  "freeLessonDifficulty": "Schwierigkeit",
+  "freeLessonNoSheets": "Lektionen werden vorbereitet.",
+  "freeLessonCTATitle": "Verbessern Sie Ihre Fähigkeiten mit\nkostenlosen Schlagzeug-Lektionen!",
+  "freeLessonCTADescription": "Wir bieten vielfältige kostenlose Lektionsmaterialien einschließlich Schlagzeugtechniken, Rudiments, Rhythmusmuster und mehr — komplett mit YouTube-Lektionsvideos. Laden Sie PDF-Notenblätter sofort herunter!",
+  "freeLessonCTAButton": "Kostenlose Lektionen entdecken",
   "customOrderCTATitle": "Benötigen Sie ein individuelles Schlagzeug-Notenblatt?",
   "customOrderCTADescription": "Fordern Sie eine individuelle Bestellung für jeden gewünschten Song an.",
   "customOrderCTADescription2": "Professionelle Schlagzeug-Notenblätter werden Ihnen geliefert.",
