--- a/src/i18n/locales/en/home.json
+++ b/src/i18n/locales/en/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "Can't find the sheet music you want? Request a custom order! We'll create professional drum sheet music for any song you want.",
   "instantDownloadTitle": "Instant Download",
   "instantDownloadDescription": "Purchase and download immediately. No waiting, start practicing right away with high-quality PDF files.",
+  "freeLessonTitle": "Free Drum Lessons",
+  "freeLessonDescription": "Boost your skills with free sheets and YouTube lessons!",
+  "freeLessonBadge": "FREE",
+  "freeLessonViewAll": "View All Lessons",
+  "freeLessonDownloadPDF": "Download PDF",
+  "freeLessonWatchVideo": "Watch Video",
+  "freeLessonDifficulty": "Difficulty",
+  "freeLessonNoSheets": "Lessons are being prepared.",
+  "freeLessonCTATitle": "Improve Your Skills with\nFree Drum Lessons!",
+  "freeLessonCTADescription": "We offer a variety of free lesson materials including drum techniques, rudiments, rhythm patterns, and more — complete with YouTube lesson videos. Download PDF sheet music instantly!",
+  "freeLessonCTAButton": "Explore Free Lessons",
   "customOrderCTATitle": "Need a Custom Drum Sheet?",
   "customOrderCTADescription": "Request a custom order for any song you want.",
   "customOrderCTADescription2": "Professional drum sheet music will be delivered to you.",
