--- a/src/i18n/locales/es/home.json
+++ b/src/i18n/locales/es/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "¿No encuentras la partitura que buscas? ¡Solicita un pedido personalizado! Crearemos partituras de batería profesionales para cualquier canción que desees.",
   "instantDownloadTitle": "Descarga Instantánea",
   "instantDownloadDescription": "Compra y descarga inmediatamente. Sin esperas, comienza a practicar de inmediato con archivos PDF de alta calidad.",
+  "freeLessonTitle": "Lecciones de Batería Gratuitas",
+  "freeLessonDescription": "¡Mejora tus habilidades con partituras gratuitas y lecciones de YouTube!",
+  "freeLessonBadge": "GRATIS",
+  "freeLessonViewAll": "Ver Todas las Lecciones",
+  "freeLessonDownloadPDF": "Descargar PDF",
+  "freeLessonWatchVideo": "Ver Video",
+  "freeLessonDifficulty": "Dificultad",
+  "freeLessonNoSheets": "Las lecciones se están preparando.",
+  "freeLessonCTATitle": "¡Mejora tus habilidades con\nlecciones de batería gratuitas!",
+  "freeLessonCTADescription": "Ofrecemos diversos materiales de lecciones gratuitas que incluyen técnicas de batería, rudimentos, patrones rítmicos y más, completos con videos de lecciones de YouTube. ¡Descarga partituras en PDF al instante!",
+  "freeLessonCTAButton": "Explorar Lecciones Gratuitas",
   "customOrderCTATitle": "¿Necesitas una Partitura de Batería Personalizada?",
   "customOrderCTADescription": "Solicita un pedido personalizado para cualquier canción que desees.",
   "customOrderCTADescription2": "Partituras de batería profesionales serán entregadas a ti.",
