--- a/src/i18n/locales/fr/home.json
+++ b/src/i18n/locales/fr/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "Vous ne trouvez pas la partition que vous cherchez ? Demandez une commande personnalisée ! Nous créerons des partitions de batterie professionnelles pour n'importe quelle chanson que vous souhaitez.",
   "instantDownloadTitle": "Téléchargement Instantané",
   "instantDownloadDescription": "Achetez et téléchargez immédiatement. Pas d'attente, commencez à pratiquer tout de suite avec des fichiers PDF de haute qualité.",
+  "freeLessonTitle": "Leçons de Batterie Gratuites",
+  "freeLessonDescription": "Améliorez vos compétences avec des partitions gratuites et des leçons YouTube !",
+  "freeLessonBadge": "GRATUIT",
+  "freeLessonViewAll": "Voir Toutes les Leçons",
+  "freeLessonDownloadPDF": "Télécharger le PDF",
+  "freeLessonWatchVideo": "Voir la Vidéo",
+  "freeLessonDifficulty": "Difficulté",
+  "freeLessonNoSheets": "Les leçons sont en préparation.",
+  "freeLessonCTATitle": "Améliorez vos compétences avec\ndes leçons de batterie gratuites !",
+  "freeLessonCTADescription": "Nous proposons divers matériaux de leçons gratuites comprenant des techniques de batterie, des rudiments, des motifs rythmiques et plus encore — accompagnés de vidéos de leçons YouTube. Téléchargez les partitions PDF instantanément !",
+  "freeLessonCTAButton": "Découvrir les Leçons Gratuites",
   "customOrderCTATitle": "Besoin d'une Partition de Batterie Personnalisée ?",
   "customOrderCTADescription": "Demandez une commande personnalisée pour n'importe quelle chanson que vous souhaitez.",
   "customOrderCTADescription2": "Des partitions de batterie professionnelles vous seront livrées.",
