--- a/src/i18n/locales/hi/home.json
+++ b/src/i18n/locales/hi/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "वह शीट म्यूजिक नहीं मिल रही है जिसे आप चाहते हैं? कस्टम ऑर्डर का अनुरोध करें! हम आपके लिए किसी भी गाने के लिए पेशेवर ड्रम शीट म्यूजिक बनाएंगे।",
   "instantDownloadTitle": "तत्काल डाउनलोड",
   "instantDownloadDescription": "तुरंत खरीदें और डाउनलोड करें। कोई प्रतीक्षा नहीं, उच्च गुणवत्ता वाली PDF फ़ाइलों के साथ तुरंत अभ्यास शुरू करें।",
+  "freeLessonTitle": "मुफ्त ड्रम पाठ",
+  "freeLessonDescription": "मुफ्त शीट म्यूजिक और YouTube पाठों के साथ अपने कौशल में सुधार करें!",
+  "freeLessonBadge": "मुफ्त",
+  "freeLessonViewAll": "सभी पाठ देखें",
+  "freeLessonDownloadPDF": "PDF डाउनलोड",
+  "freeLessonWatchVideo": "वीडियो देखें",
+  "freeLessonDifficulty": "कठिनाई",
+  "freeLessonNoSheets": "पाठ तैयार किए जा रहे हैं।",
+  "freeLessonCTATitle": "मुफ्त ड्रम पाठों के साथ\nअपने कौशल में सुधार करें!",
+  "freeLessonCTADescription": "हम ड्रम तकनीक, रूडिमेंट्स, ताल पैटर्न और अधिक सहित विविध मुफ्त पाठ सामग्री प्रदान करते हैं — YouTube पाठ वीडियो के साथ। PDF शीट म्यूजिक तुरंत डाउनलोड करें!",
+  "freeLessonCTAButton": "मुफ्त पाठ देखें",
   "customOrderCTATitle": "कस्टम ड्रम शीट चाहिए?",
   "customOrderCTADescription": "किसी भी गाने के लिए कस्टम ऑर्डर का अनुरोध करें।",
   "customOrderCTADescription2": "पेशेवर ड्रम शीट म्यूजिक आपको वितरित की जाएगी।",
