--- a/src/i18n/locales/id/home.json
+++ b/src/i18n/locales/id/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "Tidak dapat menemukan lembaran musik yang Anda inginkan? Minta pesanan kustom! Kami akan membuat lembaran musik drum profesional untuk lagu apa pun yang Anda inginkan.",
   "instantDownloadTitle": "Unduhan Instan",
   "instantDownloadDescription": "Beli dan unduh segera. Tanpa menunggu, mulai berlatih langsung dengan file PDF berkualitas tinggi.",
+  "freeLessonTitle": "Pelajaran Drum Gratis",
+  "freeLessonDescription": "Tingkatkan keterampilan Anda dengan lembaran musik gratis dan pelajaran YouTube!",
+  "freeLessonBadge": "GRATIS",
+  "freeLessonViewAll": "Lihat Semua Pelajaran",
+  "freeLessonDownloadPDF": "Unduh PDF",
+  "freeLessonWatchVideo": "Tonton Video",
+  "freeLessonDifficulty": "Tingkat Kesulitan",
+  "freeLessonNoSheets": "Pelajaran sedang disiapkan.",
+  "freeLessonCTATitle": "Tingkatkan keterampilan Anda dengan\npelajaran drum gratis!",
+  "freeLessonCTADescription": "Kami menyediakan berbagai materi pelajaran gratis termasuk teknik drum, rudiment, pola ritme, dan lainnya — lengkap dengan video pelajaran YouTube. Unduh lembaran musik PDF secara instan!",
+  "freeLessonCTAButton": "Jelajahi Pelajaran Gratis",
   "customOrderCTATitle": "Perlu Lembaran Drum Kustom?",
   "customOrderCTADescription": "Minta pesanan kustom untuk lagu apa pun yang Anda inginkan.",
   "customOrderCTADescription2": "Lembaran musik drum profesional akan dikirimkan kepada Anda.",
