--- a/src/i18n/locales/it/home.json
+++ b/src/i18n/locales/it/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "Non trovi lo spartito che desideri? Richiedi un ordine personalizzato! Creeremo spartiti per batteria professionali per qualsiasi canzone tu voglia.",
   "instantDownloadTitle": "Download immediato",
   "instantDownloadDescription": "Acquista e scarica immediatamente. Nessuna attesa, inizia subito a praticare con file PDF di alta qualità.",
+  "freeLessonTitle": "Lezioni di Batteria Gratuite",
+  "freeLessonDescription": "Migliora le tue abilità con spartiti gratuiti e lezioni su YouTube!",
+  "freeLessonBadge": "GRATIS",
+  "freeLessonViewAll": "Vedi Tutte le Lezioni",
+  "freeLessonDownloadPDF": "Scarica PDF",
+  "freeLessonWatchVideo": "Guarda Video",
+  "freeLessonDifficulty": "Difficoltà",
+  "freeLessonNoSheets": "Le lezioni sono in preparazione.",
+  "freeLessonCTATitle": "Migliora le tue abilità con\nlezioni di batteria gratuite!",
+  "freeLessonCTADescription": "Offriamo diversi materiali di lezione gratuiti tra cui tecniche di batteria, rudimenti, pattern ritmici e altro — completi di video lezioni su YouTube. Scarica gli spartiti PDF istantaneamente!",
+  "freeLessonCTAButton": "Esplora Lezioni Gratuite",
   "customOrderCTATitle": "Hai bisogno di uno spartito per batteria personalizzato?",
   "customOrderCTADescription": "Richiedi un ordine personalizzato per qualsiasi canzone tu voglia.",
   "customOrderCTADescription2": "Spartiti per batteria professionali ti saranno consegnati.",
