--- a/src/i18n/locales/ja/home.json
+++ b/src/i18n/locales/ja/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "探している楽譜が見つかりませんか？カスタム注文をご利用ください！希望する曲のプロフェッショナルなドラム楽譜を制作いたします。",
   "instantDownloadTitle": "即時ダウンロード",
   "instantDownloadDescription": "購入後すぐにダウンロード可能。待ち時間なしで、高品質なPDFファイルですぐに練習を始められます。",
+  "freeLessonTitle": "無料ドラムレッスン",
+  "freeLessonDescription": "無料楽譜とYouTubeレッスンでドラムスキルを磨きましょう！",
+  "freeLessonBadge": "FREE",
+  "freeLessonViewAll": "すべてのレッスンを見る",
+  "freeLessonDownloadPDF": "PDFダウンロード",
+  "freeLessonWatchVideo": "動画を見る",
+  "freeLessonDifficulty": "難易度",
+  "freeLessonNoSheets": "レッスン資料を準備中です。",
+  "freeLessonCTATitle": "無料ドラムレッスンで\nスキルアップしましょう！",
+  "freeLessonCTADescription": "ドラムテクニック、ルーディメント、リズムパターンなど、さまざまな無料レッスン資料をYouTube動画とともに提供します。PDFをすぐにダウンロード！",
+  "freeLessonCTAButton": "無料レッスンを見る",
   "customOrderCTATitle": "カスタムドラム楽譜が必要ですか？",
   "customOrderCTADescription": "希望する曲のカスタム注文をご依頼ください。",
   "customOrderCTADescription2": "プロフェッショナルなドラム楽譜をお届けします。",
