--- a/src/i18n/locales/pt/home.json
+++ b/src/i18n/locales/pt/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "Não encontrou a partitura que deseja? Solicite um pedido personalizado! Criaremos partituras de bateria profissionais para qualquer música que você quiser.",
   "instantDownloadTitle": "Download Instantâneo",
   "instantDownloadDescription": "Compre e baixe imediatamente. Sem espera, comece a praticar imediatamente com arquivos PDF de alta qualidade.",
+  "freeLessonTitle": "Aulas de Bateria Gratuitas",
+  "freeLessonDescription": "Melhore suas habilidades com partituras gratuitas e aulas no YouTube!",
+  "freeLessonBadge": "GRÁTIS",
+  "freeLessonViewAll": "Ver Todas as Aulas",
+  "freeLessonDownloadPDF": "Baixar PDF",
+  "freeLessonWatchVideo": "Assistir Vídeo",
+  "freeLessonDifficulty": "Dificuldade",
+  "freeLessonNoSheets": "As aulas estão sendo preparadas.",
+  "freeLessonCTATitle": "Melhore suas habilidades com\naulas de bateria gratuitas!",
+  "freeLessonCTADescription": "Oferecemos diversos materiais de aulas gratuitas incluindo técnicas de bateria, rudimentos, padrões rítmicos e mais — completos com vídeos de aulas no YouTube. Baixe partituras em PDF instantaneamente!",
+  "freeLessonCTAButton": "Explorar Aulas Gratuitas",
   "customOrderCTATitle": "Precisa de uma Partitura de Bateria Personalizada?",
   "customOrderCTADescription": "Solicite um pedido personalizado para qualquer música que desejar.",
   "customOrderCTADescription2": "Partituras de bateria profissionais serão entregues a você.",
