--- a/src/i18n/locales/ru/home.json
+++ b/src/i18n/locales/ru/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "Не можете найти нужную партитуру? Запросите индивидуальный заказ! Мы создадим профессиональные партитуры для барабанов для любой песни, которую вы хотите.",
   "instantDownloadTitle": "Мгновенное Скачивание",
   "instantDownloadDescription": "Купите и скачайте сразу. Без ожидания, начните практиковаться сразу с файлами PDF высокого качества.",
+  "freeLessonTitle": "Бесплатные Уроки Барабанов",
+  "freeLessonDescription": "Улучшите свои навыки с бесплатными партитурами и уроками на YouTube!",
+  "freeLessonBadge": "БЕСПЛАТНО",
+  "freeLessonViewAll": "Смотреть Все Уроки",
+  "freeLessonDownloadPDF": "Скачать PDF",
+  "freeLessonWatchVideo": "Смотреть Видео",
+  "freeLessonDifficulty": "Сложность",
+  "freeLessonNoSheets": "Уроки готовятся.",
+  "freeLessonCTATitle": "Улучшите свои навыки с\nбесплатными уроками барабанов!",
+  "freeLessonCTADescription": "Мы предлагаем разнообразные бесплатные учебные материалы, включая технику игры на барабанах, рудименты, ритмические паттерны и многое другое — с видеоуроками на YouTube. Скачайте партитуры в PDF мгновенно!",
+  "freeLessonCTAButton": "Изучить Бесплатные Уроки",
   "customOrderCTATitle": "Нужна Индивидуальная Партитура для Барабанов?",
   "customOrderCTADescription": "Запросите индивидуальный заказ для любой песни, которую вы хотите.",
   "customOrderCTADescription2": "Профессиональные партитуры для барабанов будут доставлены вам.",
