--- a/src/i18n/locales/th/home.json
+++ b/src/i18n/locales/th/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "หาแผ่นเพลงที่ต้องการไม่เจอ? ขอคำสั่งซื้อแบบกำหนดเอง! เราจะสร้างแผ่นเพลงกลองมืออาชีพสำหรับเพลงใดๆ ที่คุณต้องการ",
   "instantDownloadTitle": "ดาวน์โหลดทันที",
   "instantDownloadDescription": "ซื้อและดาวน์โหลดทันที ไม่ต้องรอ เริ่มฝึกซ้อมได้ทันทีด้วยไฟล์ PDF คุณภาพสูง",
+  "freeLessonTitle": "บทเรียนกลองฟรี",
+  "freeLessonDescription": "พัฒนาทักษะของคุณด้วยแผ่นเพลงฟรีและบทเรียน YouTube!",
+  "freeLessonBadge": "ฟรี",
+  "freeLessonViewAll": "ดูบทเรียนทั้งหมด",
+  "freeLessonDownloadPDF": "ดาวน์โหลด PDF",
+  "freeLessonWatchVideo": "ดูวิดีโอ",
+  "freeLessonDifficulty": "ระดับความยาก",
+  "freeLessonNoSheets": "กำลังเตรียมบทเรียน",
+  "freeLessonCTATitle": "พัฒนาทักษะของคุณด้วย\nบทเรียนกลองฟรี!",
+  "freeLessonCTADescription": "เรามีสื่อการเรียนฟรีหลากหลาย รวมถึงเทคนิคกลอง รูดิเมนต์ แพทเทิร์นจังหวะ และอื่นๆ — พร้อมวิดีโอบทเรียน YouTube ดาวน์โหลดแผ่นเพลง PDF ได้ทันที!",
+  "freeLessonCTAButton": "สำรวจบทเรียนฟรี",
   "customOrderCTATitle": "ต้องการแผ่นเพลงกลองแบบกำหนดเอง?",
   "customOrderCTADescription": "ขอคำสั่งซื้อแบบกำหนดเองสำหรับเพลงใดๆ ที่คุณต้องการ",
   "customOrderCTADescription2": "แผ่นเพลงกลองมืออาชีพจะถูกส่งมอบให้คุณ",
