--- a/src/i18n/locales/tr/home.json
+++ b/src/i18n/locales/tr/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "İstediğiniz notayı bulamıyor musunuz? Özel sipariş talep edin! İstediğiniz herhangi bir şarkı için profesyonel davul notası oluşturacağız.",
   "instantDownloadTitle": "Anında İndirme",
   "instantDownloadDescription": "Satın alın ve hemen indirin. Bekleme yok, yüksek kaliteli PDF dosyalarıyla hemen pratik yapmaya başlayın.",
+  "freeLessonTitle": "Ücretsiz Davul Dersleri",
+  "freeLessonDescription": "Ücretsiz notalar ve YouTube dersleriyle becerilerinizi geliştirin!",
+  "freeLessonBadge": "ÜCRETSİZ",
+  "freeLessonViewAll": "Tüm Dersleri Görüntüle",
+  "freeLessonDownloadPDF": "PDF İndir",
+  "freeLessonWatchVideo": "Video İzle",
+  "freeLessonDifficulty": "Zorluk",
+  "freeLessonNoSheets": "Dersler hazırlanıyor.",
+  "freeLessonCTATitle": "Ücretsiz davul dersleriyle\nbecerilerinizi geliştirin!",
+  "freeLessonCTADescription": "Davul teknikleri, rudiment'ler, ritim kalıpları ve daha fazlasını içeren çeşitli ücretsiz ders materyalleri sunuyoruz — YouTube ders videolarıyla birlikte. PDF notalarını anında indirin!",
+  "freeLessonCTAButton": "Ücretsiz Dersleri Keşfet",
   "customOrderCTATitle": "Özel Davul Notası mı İstiyorsunuz?",
   "customOrderCTADescription": "İstediğiniz herhangi bir şarkı için özel sipariş talep edin.",
   "customOrderCTADescription2": "Profesyonel davul notası size teslim edilecektir.",
