--- a/src/i18n/locales/uk/home.json
+++ b/src/i18n/locales/uk/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "Не можете знайти потрібні ноти? Замовте індивідуальне замовлення! Ми створимо професійні ноти для барабанів для будь-якої пісні, яку ви хочете.",
   "instantDownloadTitle": "Миттєве Завантаження",
   "instantDownloadDescription": "Купуйте та завантажуйте одразу. Без очікування, почніть практикувати одразу з файлами PDF високої якості.",
+  "freeLessonTitle": "Безкоштовні Уроки Барабанів",
+  "freeLessonDescription": "Покращуйте свої навички з безкоштовними нотами та уроками на YouTube!",
+  "freeLessonBadge": "БЕЗКОШТОВНО",
+  "freeLessonViewAll": "Переглянути Всі Уроки",
+  "freeLessonDownloadPDF": "Завантажити PDF",
+  "freeLessonWatchVideo": "Дивитися Відео",
+  "freeLessonDifficulty": "Складність",
+  "freeLessonNoSheets": "Уроки готуються.",
+  "freeLessonCTATitle": "Покращуйте свої навички з\nбезкоштовними уроками барабанів!",
+  "freeLessonCTADescription": "Ми пропонуємо різноманітні безкоштовні навчальні матеріали, включаючи техніку гри на барабанах, рудименти, ритмічні патерни та багато іншого — з відеоуроками на YouTube. Завантажуйте ноти у PDF миттєво!",
+  "freeLessonCTAButton": "Дослідити Безкоштовні Уроки",
   "customOrderCTATitle": "Потрібні Індивідуальні Ноти для Барабанів?",
   "customOrderCTADescription": "Замовте індивідуальне замовлення для будь-якої пісні, яку ви хочете.",
   "customOrderCTADescription2": "Професійні ноти для барабанів будуть доставлені вам.",
