--- a/src/i18n/locales/vi/home.json
+++ b/src/i18n/locales/vi/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "Không tìm thấy sheet music bạn muốn? Yêu cầu đặt hàng tùy chỉnh! Chúng tôi sẽ tạo sheet music drum chuyên nghiệp cho bất kỳ bài hát nào bạn muốn.",
   "instantDownloadTitle": "Tải xuống ngay lập tức",
   "instantDownloadDescription": "Mua và tải xuống ngay lập tức. Không cần chờ đợi, bắt đầu luyện tập ngay với file PDF chất lượng cao.",
+  "freeLessonTitle": "Bài Học Trống Miễn Phí",
+  "freeLessonDescription": "Nâng cao kỹ năng của bạn với sheet music miễn phí và bài học YouTube!",
+  "freeLessonBadge": "MIỄN PHÍ",
+  "freeLessonViewAll": "Xem Tất Cả Bài Học",
+  "freeLessonDownloadPDF": "Tải PDF",
+  "freeLessonWatchVideo": "Xem Video",
+  "freeLessonDifficulty": "Độ Khó",
+  "freeLessonNoSheets": "Bài học đang được chuẩn bị.",
+  "freeLessonCTATitle": "Nâng cao kỹ năng của bạn với\nbài học trống miễn phí!",
+  "freeLessonCTADescription": "Chúng tôi cung cấp nhiều tài liệu bài học miễn phí bao gồm kỹ thuật trống, rudiment, mẫu nhịp điệu và nhiều hơn nữa — kèm theo video bài học YouTube. Tải sheet music PDF ngay lập tức!",
+  "freeLessonCTAButton": "Khám Phá Bài Học Miễn Phí",
   "customOrderCTATitle": "Cần Sheet Drum tùy chỉnh?",
   "customOrderCTADescription": "Yêu cầu đặt hàng tùy chỉnh cho bất kỳ bài hát nào bạn muốn.",
   "customOrderCTADescription2": "Sheet music drum chuyên nghiệp sẽ được giao cho bạn.",
