--- a/src/i18n/locales/zh-CN/home.json
+++ b/src/i18n/locales/zh-CN/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "找不到您想要的乐谱？请求定制订单！我们将为您想要的任何歌曲创建专业鼓谱乐谱。",
   "instantDownloadTitle": "即时下载",
   "instantDownloadDescription": "购买后立即下载。无需等待，立即开始使用高质量PDF文件练习。",
+  "freeLessonTitle": "免费鼓课程",
+  "freeLessonDescription": "通过免费乐谱和YouTube课程提升您的技能！",
+  "freeLessonBadge": "免费",
+  "freeLessonViewAll": "查看所有课程",
+  "freeLessonDownloadPDF": "下载PDF",
+  "freeLessonWatchVideo": "观看视频",
+  "freeLessonDifficulty": "难度",
+  "freeLessonNoSheets": "课程正在准备中。",
+  "freeLessonCTATitle": "通过免费鼓课程\n提升您的技能！",
+  "freeLessonCTADescription": "我们提供多种免费课程材料，包括鼓技巧、基本功、节奏模式等——配有YouTube课程视频。立即下载PDF乐谱！",
+  "freeLessonCTAButton": "探索免费课程",
   "customOrderCTATitle": "需要定制鼓谱？",
   "customOrderCTADescription": "为您想要的任何歌曲请求定制订单。",
   "customOrderCTADescription2": "专业鼓谱乐谱将交付给您。",
