--- a/src/i18n/locales/zh-TW/home.json
+++ b/src/i18n/locales/zh-TW/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "找不到您想要的樂譜？請求客製訂單！我們將為您想要的任何歌曲製作專業鼓譜。",
   "instantDownloadTitle": "立即下載",
   "instantDownloadDescription": "購買並立即下載。無需等待，立即開始使用高品質 PDF 檔案練習。",
+  "freeLessonTitle": "免費鼓課程",
+  "freeLessonDescription": "透過免費樂譜和 YouTube 課程提升您的技能！",
+  "freeLessonBadge": "免費",
+  "freeLessonViewAll": "查看所有課程",
+  "freeLessonDownloadPDF": "下載 PDF",
+  "freeLessonWatchVideo": "觀看影片",
+  "freeLessonDifficulty": "難度",
+  "freeLessonNoSheets": "課程正在準備中。",
+  "freeLessonCTATitle": "透過免費鼓課程\n提升您的技能！",
+  "freeLessonCTADescription": "我們提供多種免費課程資料，包括鼓技巧、基本功、節奏模式等——搭配 YouTube 課程影片。立即下載 PDF 樂譜！",
+  "freeLessonCTAButton": "探索免費課程",
   "customOrderCTATitle": "需要客製鼓譜？",
   "customOrderCTADescription": "為您想要的任何歌曲請求客製訂單。",
   "customOrderCTADescription2": "專業鼓譜將送達給您。",
