--- a/src/i18n/locales/ko/home.json
+++ b/src/i18n/locales/ko/home.json
@@ -57,6 +57,17 @@
   "customOrderDescription": "원하는 악보가 없으신가요? 맞춤 제작을 신청하세요! 원하는 어떤 곡이든 전문가가 직접 만든 드럼 악보를 제공해드립니다.",
   "instantDownloadTitle": "즉시 다운로드",
   "instantDownloadDescription": "구매 즉시 다운로드 가능합니다. 기다림 없이 고품질 PDF 파일로 바로 연습을 시작하세요.",
+  "freeLessonTitle": "무료 드럼 레슨",
+  "freeLessonDescription": "무료 악보와 유튜브 레슨으로 드럼 실력을 키워보세요!",
+  "freeLessonBadge": "FREE",
+  "freeLessonViewAll": "전체 레슨 보기",
+  "freeLessonDownloadPDF": "PDF 다운로드",
+  "freeLessonWatchVideo": "영상 보기",
+  "freeLessonDifficulty": "난이도",
+  "freeLessonNoSheets": "준비 중인 레슨 자료입니다.",
+  "freeLessonCTATitle": "무료 드럼 레슨으로\n실력을 키워보세요!",
+  "freeLessonCTADescription": "드럼 테크닉, 루디먼트, 리듬 패턴 등 다양한 무료 레슨 자료를 유튜브 영상과 함께 제공합니다. PDF 악보를 바로 다운로드하세요!",
+  "freeLessonCTAButton": "무료 레슨 보러가기",
   "customOrderCTATitle": "맞춤 드럼 악보가 필요하신가요?",
   "customOrderCTADescription": "원하는 어떤 곡이든 맞춤 제작을 신청하세요.",
   "customOrderCTADescription2": "전문가가 만든 드럼 악보를 제공해드립니다.",
