checkout UI: 寃곗젣?섎떒 ?쇰꺼/?꾩씠肄?媛쒖꽑, 移댁뭅?ㅽ럹???꾩튂 ?대룞
- ?뱀뀡 ?쇰꺼: Credit/Debit Card & Wallets 濡?蹂寃?(20媛??몄뼱 踰덉뿭)
- ?꾩씠肄??쇱씤: Visa(?늆VG), Mastercard, Amex, Apple Pay, Google Pay, UnionPay
- ?꾩씠肄??섎떒 + Local Cards Supported 硫붿떆吏 異붽? (20媛??몄뼱 踰덉뿭)
- 移댁뭅?ㅽ럹??踰꾪듉??PayPal ?뱀뀡 ?섎떒?쇰줈 ?대룞

--- a/src/i18n/locales/ar/checkout.json
+++ b/src/i18n/locales/ar/checkout.json
@@ -35,5 +35,7 @@
   "confirmPayment": "تأكيد الدفع",
   "cancel": "إلغاء",
   "securePayment": "دفع آمن مع تشفير SSL",
-  "poweredBy": "مدعوم من {{provider}}"
+  "poweredBy": "مدعوم من {{provider}}",
+  "creditDebitWallets": "بطاقة ائتمان/خصم & محافظ إلكترونية",
+  "localCardsSupported": "+ دعم البطاقات المحلية"
 }
