--- a/src/i18n/locales/nl/checkout.json
+++ b/src/i18n/locales/nl/checkout.json
@@ -35,5 +35,7 @@
   "confirmPayment": "Bevestig betaling",
   "cancel": "Annuleren",
   "securePayment": "Veilige betaling met SSL-versleuteling",
-  "poweredBy": "Mogelijk gemaakt door {{provider}}"
+  "poweredBy": "Mogelijk gemaakt door {{provider}}",
+  "creditDebitWallets": "Creditcard/Debetkaart & Wallets",
+  "localCardsSupported": "+ Lokale kaarten ondersteund"
 }
