--- a/src/i18n/locales/fr/checkout.json
+++ b/src/i18n/locales/fr/checkout.json
@@ -35,5 +35,7 @@
   "confirmPayment": "Confirmer le Paiement",
   "cancel": "Annuler",
   "securePayment": "Paiement sécurisé avec cryptage SSL",
-  "poweredBy": "Propulsé par {{provider}}"
+  "poweredBy": "Propulsé par {{provider}}",
+  "creditDebitWallets": "Carte de Crédit/Débit & Portefeuilles",
+  "localCardsSupported": "+ Cartes locales acceptées"
 }
