--- a/src/i18n/locales/zh-CN/checkout.json
+++ b/src/i18n/locales/zh-CN/checkout.json
@@ -35,5 +35,7 @@
   "confirmPayment": "确认支付",
   "cancel": "取消",
   "securePayment": "SSL加密安全支付",
-  "poweredBy": "由{{provider}}提供支持"
+  "poweredBy": "由{{provider}}提供支持",
+  "creditDebitWallets": "信用卡/借记卡 & 电子钱包",
+  "localCardsSupported": "+ 支持本地银行卡"
 }
