--- a/src/i18n/locales/zh-TW/checkout.json
+++ b/src/i18n/locales/zh-TW/checkout.json
@@ -35,5 +35,7 @@
   "confirmPayment": "確認付款",
   "cancel": "取消",
   "securePayment": "SSL加密安全付款",
-  "poweredBy": "由{{provider}}提供支援"
+  "poweredBy": "由{{provider}}提供支援",
+  "creditDebitWallets": "信用卡/金融卡 & 電子錢包",
+  "localCardsSupported": "+ 支援當地銀行卡"
 }
