而щ젆??移댄뀒怨좊━ ?꾪꽣 ?섏젙
- 踰덉뿭 ???섏젙: collectionsPage.category.all -> collectionsPage.filter.all
- 踰덉뿭 ?뚯씪??filter.filtered ??異붽?
- ?뱀젙 移댄뀒怨좊━ ?쒖쇅: 湲곗큹/?낅Ц, ?쒕읆?뚰겕?? 猷⑤뵒癒쇳듃, 由щ벉?⑦꽩, ?꾩씤

--- a/src/i18n/locales/en/collectionsPage.json
+++ b/src/i18n/locales/en/collectionsPage.json
@@ -3,7 +3,8 @@
   "title": "Sheet Music Collections",
   "subtitle": "Discover our specially curated drum sheet music collections by theme.",
   "filter": {
-    "all": "All"
+    "all": "All",
+    "filtered": "{{category}}: {{count}} collections"
   },
   "empty": {
     "noCollections": "No collections registered.",
