feat: Add pre-purchase checklist section to mobile detail page and update translations

--- a/src/i18n/locales/de/sheetDetail.json
+++ b/src/i18n/locales/de/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Nicht festgelegt"
   },
   "instrumentPart": "Schlagzeug",
-  "includes": "Enthält",
+  "includes": "Vor dem Kauf zu prüfende Punkte",
   "noLyrics": "Nur Schlagzeug-Notation (keine Texte)",
   "checkPerformanceVideo": "Schauen Sie sich das Aufführungsvideo auf YouTube an",
   "performanceVideo": "Aufführungsvideo",
