--- a/src/i18n/locales/en/sheetDetail.json
+++ b/src/i18n/locales/en/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Not Set"
   },
   "instrumentPart": "Drum",
-  "includes": "Includes",
+  "includes": "Things to Check Before Purchase",
   "noLyrics": "Drum notation only (no lyrics)",
   "checkPerformanceVideo": "Check out the performance video on YouTube",
   "performanceVideo": "Performance Video",
