--- a/src/i18n/locales/es/sheetDetail.json
+++ b/src/i18n/locales/es/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "No Establecido"
   },
   "instrumentPart": "Batería",
-  "includes": "Incluye",
+  "includes": "Cosas a verificar antes de comprar",
   "noLyrics": "Solo notación de batería (sin letras)",
   "checkPerformanceVideo": "Consulta el video de presentación en YouTube",
   "performanceVideo": "Video de Presentación",
