--- a/src/i18n/locales/fr/sheetDetail.json
+++ b/src/i18n/locales/fr/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Non Défini"
   },
   "instrumentPart": "Batterie",
-  "includes": "Inclut",
+  "includes": "Points à vérifier avant l'achat",
   "noLyrics": "Notation de batterie uniquement (sans paroles)",
   "checkPerformanceVideo": "Consultez la vidéo de performance sur YouTube",
   "performanceVideo": "Vidéo de Performance",
