--- a/src/i18n/locales/hi/sheetDetail.json
+++ b/src/i18n/locales/hi/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "सेट नहीं है"
   },
   "instrumentPart": "ड्रम",
-  "includes": "शामिल है",
+  "includes": "खरीदने से पहले जांचने योग्य बातें",
   "noLyrics": "केवल ड्रम नोटेशन (कोई गीत नहीं)",
   "checkPerformanceVideo": "YouTube पर प्रदर्शन वीडियो देखें",
   "performanceVideo": "प्रदर्शन वीडियो",
