--- a/src/i18n/locales/id/sheetDetail.json
+++ b/src/i18n/locales/id/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Tidak Ditetapkan"
   },
   "instrumentPart": "Drum",
-  "includes": "Termasuk",
+  "includes": "Hal yang perlu diperiksa sebelum membeli",
   "noLyrics": "Hanya notasi drum (tanpa lirik)",
   "checkPerformanceVideo": "Lihat video pertunjukan di YouTube",
   "performanceVideo": "Video Pertunjukan",
