--- a/src/i18n/locales/it/sheetDetail.json
+++ b/src/i18n/locales/it/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Non Impostato"
   },
   "instrumentPart": "Batteria",
-  "includes": "Include",
+  "includes": "Cose da verificare prima dell'acquisto",
   "noLyrics": "Solo notazione per batteria (senza testo)",
   "checkPerformanceVideo": "Guarda il video della performance su YouTube",
   "performanceVideo": "Video della Performance",
