--- a/src/i18n/locales/ja/sheetDetail.json
+++ b/src/i18n/locales/ja/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "未設定"
   },
   "instrumentPart": "ドラム",
-  "includes": "含まれる内容",
+  "includes": "購入前の確認事項",
   "noLyrics": "ドラム譜のみ（歌詞なし）",
   "checkPerformanceVideo": "YouTubeで演奏動画を確認",
   "performanceVideo": "演奏動画",
