--- a/src/i18n/locales/pt/sheetDetail.json
+++ b/src/i18n/locales/pt/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Não Definido"
   },
   "instrumentPart": "Bateria",
-  "includes": "Inclui",
+  "includes": "Coisas a verificar antes de comprar",
   "noLyrics": "Apenas notação de bateria (sem letras)",
   "checkPerformanceVideo": "Confira o vídeo de performance no YouTube",
   "performanceVideo": "Vídeo de Performance",
