--- a/src/i18n/locales/ru/sheetDetail.json
+++ b/src/i18n/locales/ru/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Не Установлено"
   },
   "instrumentPart": "Барабаны",
-  "includes": "Включает",
+  "includes": "Что проверить перед покупкой",
   "noLyrics": "Только нотация для барабанов (без текста)",
   "checkPerformanceVideo": "Посмотрите видео выступления на YouTube",
   "performanceVideo": "Видео Выступления",
