--- a/src/i18n/locales/th/sheetDetail.json
+++ b/src/i18n/locales/th/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "ยังไม่ได้ตั้งค่า"
   },
   "instrumentPart": "กลอง",
-  "includes": "รวม",
+  "includes": "สิ่งที่ต้องตรวจสอบก่อนซื้อ",
   "noLyrics": "สัญกรณ์กลองเท่านั้น (ไม่มีเนื้อเพลง)",
   "checkPerformanceVideo": "ตรวจสอบวิดีโอการแสดงบน YouTube",
   "performanceVideo": "วิดีโอการแสดง",
