--- a/src/i18n/locales/tr/sheetDetail.json
+++ b/src/i18n/locales/tr/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Ayarlanmamış"
   },
   "instrumentPart": "Davul",
-  "includes": "İçerir",
+  "includes": "Satın almadan önce kontrol edilmesi gerekenler",
   "noLyrics": "Yalnızca davul notasyonu (söz yok)",
   "checkPerformanceVideo": "YouTube'daki performans videosunu kontrol edin",
   "performanceVideo": "Performans Videosu",
