--- a/src/i18n/locales/uk/sheetDetail.json
+++ b/src/i18n/locales/uk/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Не Встановлено"
   },
   "instrumentPart": "Барабани",
-  "includes": "Включає",
+  "includes": "Що перевірити перед покупкою",
   "noLyrics": "Тільки нотація для барабанів (без тексту)",
   "checkPerformanceVideo": "Подивіться відео виступу на YouTube",
   "performanceVideo": "Відео Виступу",
