--- a/src/i18n/locales/vi/sheetDetail.json
+++ b/src/i18n/locales/vi/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "Chưa đặt"
   },
   "instrumentPart": "Drum",
-  "includes": "Bao gồm",
+  "includes": "Những điều cần kiểm tra trước khi mua",
   "noLyrics": "Chỉ ký hiệu drum (không có lời bài hát)",
   "checkPerformanceVideo": "Xem video biểu diễn trên YouTube",
   "performanceVideo": "Video biểu diễn",
