--- a/src/i18n/locales/zh-CN/sheetDetail.json
+++ b/src/i18n/locales/zh-CN/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "未设置"
   },
   "instrumentPart": "鼓",
-  "includes": "包括",
+  "includes": "购买前确认事项",
   "noLyrics": "仅鼓谱（无歌词）",
   "checkPerformanceVideo": "在YouTube上查看演奏视频",
   "performanceVideo": "演奏视频",
