--- a/src/i18n/locales/zh-TW/sheetDetail.json
+++ b/src/i18n/locales/zh-TW/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "未設定"
   },
   "instrumentPart": "鼓",
-  "includes": "包含",
+  "includes": "購買前確認事項",
   "noLyrics": "僅鼓譜（無歌詞）",
   "checkPerformanceVideo": "在 YouTube 上查看演出影片",
   "performanceVideo": "演出影片",
