feat: Hide DodoPayments option from checkout page and update Korean translations

--- a/src/i18n/locales/ko/collectionsDetail.json
+++ b/src/i18n/locales/ko/collectionsDetail.json
@@ -64,7 +64,7 @@
     "advanced": "고급"
   },
   "features": {
-    "title": "포함 내용",
+    "title": "구매 전 확인사항",
     "allSheets": "모든 악보를 할인된 가격에 구매",
     "highQuality": "고품질 PDF 형식 제공",
     "instantDownload": "즉시 다운로드 가능",
