--- a/src/i18n/locales/ko/sheetDetail.json
+++ b/src/i18n/locales/ko/sheetDetail.json
@@ -43,7 +43,7 @@
     "notSet": "미설정"
   },
   "instrumentPart": "드럼",
-  "includes": "포함 내용",
+  "includes": "구매 전 확인사항",
   "noLyrics": "드럼 악보만 제공 (가사 없음)",
   "checkPerformanceVideo": "유튜브에서 연주 영상을 확인하세요",
   "performanceVideo": "연주 영상",
